--- a/main.css
+++ b/main.css
@@ -42,7 +42,8 @@ ul, ol, li {
     font-style: normal;
     font-display: swap;
 }
-.wrap{
+
+.wrap {
     max-width: 2700px;
     margin: 0 auto;
 }
@@ -223,12 +224,13 @@ body {
 }
 
 .header_main_right img {
-    max-width: 100%;
-    height: auto;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
 }
 
 @media (max-width: 1138px) {
+
     .header_main_content {
         position: relative;
         display: flex;
@@ -453,6 +455,7 @@ body {
     margin-top: 120px;
     margin-bottom: 120px;
     padding: 0 15px 0 15px;
+    box-sizing: content-box;
 }
 
 .package_block {
@@ -545,13 +548,21 @@ body {
     }
 }
 
-@media (max-width: 796px) {
+@media (max-width: 797px) {
     .package_title {
         text-align: center;
     }
 
     .package_main_content {
         justify-content: center;
+    }
+
+    .package_block:hover {
+        margin-bottom: 20px;
+    }
+
+    .package {
+        height: 1870px;
     }
 }
 
@@ -704,13 +715,12 @@ body {
 }
 
 /*************************************************/
-.swiper_container {
+.swcontent {
     width: 100%;
     display: flex;
     justify-content: flex-end;
-    min-width: 0;
-    font-size: 18px;
-    font-weight: 400;
+    padding-left: 20px;
+    box-sizing: border-box;
 }
 
 .training_content_title {
@@ -720,6 +730,20 @@ body {
     color: rgb(20, 16, 36);
     margin-bottom: 60px;
     line-height: normal;
+}
+
+.swiper-slide {
+    width: auto;
+}
+
+
+.content-card {
+    width: 100%;
+    min-width: 360px;
+}
+
+.swiper-wrapper {
+    width: 100%;
 }
 
 .training_block_img {
@@ -741,6 +765,7 @@ body {
 }
 
 .training_block_text1 {
+    font-family: 'Jost-SemiBold';
     font-size: 24px;
     font-weight: 600;
     color: rgb(20, 16, 36);
@@ -751,33 +776,15 @@ body {
     font-size: 18px;
     color: rgba(20, 16, 36, 0.7);
     margin-bottom: 20px;
-
+    width: 261px;
+    height: 29px;
 }
 
 .training_block_text3 {
     font-size: 18px;
     color: red;
-}
-
-
-.swiper-slide {
-    width: auto;
-    min-width: 220px;
-    height: auto;
-}
-
-.swiper {
-    margin-left: 0;
-    margin-right: 0;
-    width: 100%;
-    max-width: 1500px;
-}
-
-.swiper-wrapper {
-    height: auto;
-    margin-bottom: 50px;
-    padding-left: 10px;
-    box-sizing: border-box;
+    width: 93px;
+    height: 29px;
 }
 
 .navigate {
@@ -789,28 +796,7 @@ body {
     padding-right: 10px;
     max-width: 1200px;
     box-sizing: border-box;
-    min-width: 0;
-}
-
-.swiper-horizontal > .swiper-scrollbar, .swiper-scrollbar.swiper-scrollbar-horizontal {
-    max-width: 360px;
-    max-height: 5px;
-    width: 100%;
-    height: 100%;
-}
-
-
-.swiper-scrollbar-drag {
-    background: rgb(20, 16, 36);
-}
-
-.swiper-scrollbar {
-    position: relative;
-    display: block;
-    margin-bottom: 10px;
-    margin-left: 10px;
-    margin-right: 10px;
-    box-sizing: border-box;
+    margin-top: 100px;
 }
 
 .arrows {
@@ -829,28 +815,42 @@ body {
     height: 100%;
 }
 
-@media (max-width: 550px) {
-    .arrows {
-        display: none;
+.scrollbar-container {
+    width: 360px;
+    height: 5px;
+    border-radius: 40px;
+    background: rgba(20, 16, 36, 0.08);
+}
+
+.swiper-scrollbar-drag {
+    background-color: rgb(20, 16, 36);
+}
+
+@media (max-width: 1520px) {
+    .swwrap {
+        width: 100%;
+        max-width: 100%;
     }
 }
 
-@media (max-width: 950px) {
+@media (max-width: 770px) {
     .training_content_title {
         font-size: 30px;
         font-weight: 600;
-        line-height: normal;
+        margin-bottom: 40px;
+    }
+
+    .content-card {
+        min-width: 220px;
     }
 
     .training_block_img {
-        max-width: 220px;
-        max-height: 306px;
+        height: 306px;
     }
 
     .training_block_text1 {
         font-size: 20px;
         font-weight: 600;
-        margin-bottom: 10px;
     }
 
     .training_block_text2 {
@@ -861,6 +861,12 @@ body {
     .training_block_text3 {
         font-size: 16px;
         font-weight: 400;
+    }
+}
+
+@media (max-width: 580px) {
+    .arrows {
+        display: none;
     }
 }
 
@@ -877,11 +883,11 @@ ul, ol, li {
     list-style: none;
 }
 
-.modal_back_open {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+/*.modal_back_open {*/
+/*    display: flex;*/
+/*    justify-content: center;*/
+/*    align-items: center;*/
+/*}*/
 
 .modal_bck {
     position: fixed;
@@ -895,12 +901,14 @@ ul, ol, li {
     padding-left: 15px;
     padding-right: 15px;
     z-index: 100000;
+    overflow-y: auto;
 }
 
 .modal_back_open {
     display: flex;
     justify-content: center;
     align-items: center;
+    /*overflow-y: auto;*/
 }
 
 .close2 {
@@ -908,8 +916,12 @@ ul, ol, li {
 }
 
 .modal {
+    position: absolute;
+    top: 50px;
+    bottom: 50px;
     max-width: 1020px;
     width: 100%;
+    height: 768px;
     border-radius: 20px;
     background: rgb(255, 255, 255);
     padding: 40px 40px 40px 40px;
@@ -917,9 +929,10 @@ ul, ol, li {
     box-shadow: 0px 7px 8px 0px rgba(0, 0, 0, 0.05);
 }
 
-.header {
+.header_modal {
     width: 100%;
     display: flex;
+    margin-bottom: 40px;
     justify-content: space-between;
 }
 
@@ -1010,7 +1023,7 @@ ul, ol, li {
     width: 100%;
     overflow-x: hidden;
     overflow-y: auto;
-    height: 370px;
+    height: 380px;
 }
 
 .main__content__scroll::-webkit-scrollbar {
@@ -1117,13 +1130,15 @@ ul, ol, li {
 
     .close2 {
         display: block;
+        cursor: pointer;
     }
 }
 
 @media (max-width: 450px) {
-    .header{
+    .header {
         margin-bottom: 20px;
     }
+
     .main_btn {
         display: block;
     }
@@ -1143,7 +1158,14 @@ ul, ol, li {
     }
 }
 
-@media (max-width: 340px) {
+@media (max-width: 360px) {
+    .modal {
+        height: 650px;
+    }
+
+    /*.main__content__scroll {*/
+    /*    height: 240px;*/
+    /*}*/
     .main_content_title {
         font-size: 16px;
     }
